<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab2</string>
    <string name="hello_world_hackerman">Hello World, Hackerman!</string>

    <string name="welcome_to_the_subway" tools:ignore="DuplicateDefinition" />
    <string name="Welcome">Welcome to the Subway!</string>
    <string name="Enter">Введіть ім\'я</string>
    <string name="input_your_text">Введіть текст:</string>
    <string name="todo">TODO</string>
</resources>